# QuantumAlgorithmToolkit

./: .replit  analysis.py  app.py  app_public.py  auto_sweep_fix.py  check_versions.py  config.py  create_grid_sweep_with_simulations.py  create_parameter_sweep_table.py  create_test_sweep_with_simulations.py  db_utils.py  direct_sweep_fix.py  final_sweep_fix.py  fix_sweep_associations.py  fix_sweep_columns.py  fix_sweep_db.py  fixed_app.py  fixed_gunicorn.py  fixed_gunicorn_app.py  fixed_main.py  fixed_parameter_sweep.py  gunicorn_app.py  gunicorn_config.py  main.py  main_app.py  migrate_parameter_sweep_table.py  migrate_parameter_sweeps.py  migrate_star_column.py  migrate_sweep_columns.py  minisim.py  models.py  noauth_app.py  noauth_gunicorn.py  plot_circuit_t1.py  pyproject.toml  quantum_circuits.py  quick_sweep_fix.py  run_new_test_sweep.py  run_parameter_sweep_migration.py  run_penrose_sim.py  (+25 more)
attached_assets/: Pasted--2025-05-12-11-14-46-0000-1400-INFO-Handling-signal-winch-Google-Colab-drive-module-not-avai-1747048573232.txt  Pasted--div-class-grid-container-table-class-grid-table-thead--1747470910045.txt  Pasted-025-05-16-16-06-19-0000-4798-INFO-Listening-at-http-0-0-0-0-5000-4798-2025-05-16-16-06--1747411609085.txt  Pasted-2025-05-16-16-10-43-0000-5348-INFO-Booting-worker-with-pid-5348-2025-05-16-16-10-44-0000--1747411864949.txt  Pasted-Parameter-scan-completed-in-78-83-seconds-Processed-6-parameter-sets-Results-saved-to-results-penr-1747410084931.txt  Pasted-Starting-simulation-across-1000-time-points-Completed-100-1000-time-points-10-0-Complete-1747004717352.txt  (+8 more)
(+1323 files in other folders)
