[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pywavelets>=1.8.0",
    "qiskit-aer>=0.17.0",
    "qiskit>=2.0.0",
    "scipy>=1.15.3",
    "pylatexenc>=2.10",
    "trafilatura>=2.0.0",
    "sqlalchemy>=2.0.40",
]
